--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ img {font-weight: bold;
 
 }
 
-footer {
+#home-footer {
     width: 100%;
     color: blanchedalmond;
     background-color: antiquewhite;
@@ -31,7 +31,7 @@ footer {
     transition: 1s;
 }
 
-footer:hover {
+#home-footer:hover {
       color:red;
       font-size: 1.5em;
 }
