--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ p {
     color:yellow;
     font-weight: bold;
     font-size: 50px;
+    font-family: Playfair display ;
     height : 30px;
     width : 1000px;
 
